src/test/deca/context/invalid/method_got_attribute_name.deca
// Test of the rule (2.3): the declared method has the same name than 
// a variable already declared

class A  {
    int variableName = 5;

    void variableName(){
        println("I'm an error");
    }
}


// Resultat:
//# RULE 2.3 DOIT S'AFFICHER
//# TODOTEST
